@@ -1,9 +1,13 @@
 # -*- coding: utf-8 -*-
 
-"""Modules defining package tests."""
-
+"""
+Modules defining package tests.
+"""
 
 __revision__  = "$Rev$"
 __version__   = "0.2"
 __author__    = "D. L. Wood"
 __maintainer__ = "Jayce Dowell"
+
+import test_lsl
+
